# FoPra-Beluga-Challenge

./: .gitignore  Doxyfile  LICENSE  README.md  install_mcts_fast.bat  install_mcts_fast.sh  pyproject.toml
agent/: PPO_Critic.py  Reward_Functions.py  gym.py
docs/: _l_i_c_e_n_s_e_8md.html  _p_e_r_m_i_s_s_i_o_n_s_8md.html  action_8py.js  action_8py_source.html  actions_8py.js  annotated.html  annotated_dup.js  beluga__complete__action_8py.html  beluga__complete__action_8py.js  beluga__complete__action_8py_source.html  beluga__lib_2problem__state_8py.html  beluga__lib_2problem__state_8py.js  beluga__pddl__domain__encoding_8py.html  beluga__pddl__domain__encoding_8py.js  beluga__pddl__domain__encoding_8py_source.html  beluga__pddl__problem__encoding_8py.html  beluga__pddl__problem__encoding_8py_source.html  beluga__problem_8py.js  beluga__problem_8py_source.html  check__action_8py.js  check__action_8py_source.html  classrl_1_1agents_1_1high__level_1_1ppo__agent_1_1_actor_network-members.html  classrl_1_1agents_1_1high__level_1_1ppo__agent_1_1_actor_network.html  classrl_1_1agents_1_1high__level_1_1ppo__agent_1_1_critic_network.html  classrl_1_1agents_1_1high__level_1_1ppo__agent_1_1_critic_network.js  classrl_1_1agents_1_1high__level_1_1ppo__agent_1_1_p_p_o_agent-members.html  classrl_1_1agents_1_1high__level_1_1ppo__agent_1_1_p_p_o_agent.js  classrl_1_1agents_1_1high__level_1_1ppo__agent_1_1_p_p_o_memory.js  classrl_1_1env_1_1environment_1_1_env.js  classrl_1_1env_1_1state_1_1_beluga.js  classrl_1_1env_1_1state_1_1_jig.html  classrl_1_1env_1_1state_1_1_jig.js  classrl_1_1env_1_1state_1_1_jig_type-members.html  classrl_1_1env_1_1state_1_1_problem_state.js  classrl_1_1env_1_1state_1_1_production_line.js  classrl_1_1training_1_1trainer_1_1_trainer-members.html  classrl_1_1training_1_1trainer_1_1_trainer.js  classtoolkit_1_1beluga__lib_1_1beluga__problem_1_1_beluga_problem.html  classtoolkit_1_1beluga__lib_1_1beluga__problem_1_1_beluga_problem.js  classtoolkit_1_1beluga__lib_1_1beluga__problem_1_1_beluga_problem_decoder.js  (+400 more)
problemfilter/: problem_filter.py
problems/: problem_0_s42_j91_r9_oc83_f49.json  problem_100_s142_j161_r14_oc51_f71.json  problem_101_s143_j273_r20_oc81_f122.json  problem_102_s144_j92_r11_oc84_f58.json  problem_103_s145_j266_r20_oc21_f173.json  problem_104_s146_j28_r2_oc56_f12.json  problem_105_s147_j33_r4_oc84_f21.json  problem_106_s148_j87_r4_oc83_f23.json  problem_107_s149_j4_r2_oc80_f4.json  problem_108_s150_j55_r6_oc31_f34.json  problem_109_s151_j300_r20_oc20_f113.json  problem_10_s52_j24_r2_oc20_f13.json  problem_110_s152_j307_r20_oc81_f190.json  problem_111_s153_j18_r2_oc31_f7.json  problem_112_s154_j18_r2_oc25_f9.json  problem_113_s155_j428_r20_oc21_f157.json  problem_114_s156_j796_r20_oc51_f175.json  problem_115_s157_j37_r5_oc34_f29.json  problem_116_s158_j316_r16_oc80_f84.json  problem_117_s159_j90_r12_oc80_f61.json  problem_118_s160_j424_r20_oc20_f183.json  problem_119_s161_j189_r15_oc51_f75.json  problem_11_s53_j174_r19_oc51_f96.json  problem_120_s162_j416_r20_oc51_f117.json  problem_121_s163_j273_r20_oc51_f167.json  problem_122_s164_j165_r16_oc52_f82.json  problem_123_s165_j22_r3_oc85_f15.json  problem_124_s166_j11_r2_oc85_f4.json  problem_125_s167_j303_r20_oc20_f133.json  problem_126_s168_j123_r12_oc21_f63.json  problem_127_s169_j488_r20_oc51_f109.json  problem_128_s170_j71_r6_oc55_f31.json  problem_129_s171_j281_r20_oc52_f128.json  problem_12_s54_j4_r2_oc20_f3.json  problem_130_s172_j248_r20_oc23_f107.json  problem_131_s173_j50_r6_oc52_f33.json  problem_132_s174_j302_r20_oc24_f122.json  problem_133_s175_j47_r4_oc28_f20.json  problem_134_s176_j247_r18_oc21_f94.json  problem_135_s177_j8_r2_oc89_f3.json  (+229 more)
problemset1/: problem1.json  problem10.json  problem10_j15_r9.json  problem10_j30_r8_b7_pl3.json  problem11.json  problem11_j27_r4_b5_pl1.json  problem11_j6_r5.json  problem12.json  problem12_j15_r3_b4_pl1.json  problem12_j21_r5.json  problem13.json  problem13_j28_r3.json  problem13_j5_r2_b0_pl1.json  problem14.json  problem14_j4_r2_b2_pl2.json  problem14_j5_r4.json  problem15_j25_r6_b5_pl2.json  problem15_j7_r6.json  problem16.json  problem16_j7_r5_b2_pl2.json  problem16_j7_r9.json  problem17.json  problem17_j21_r7.json  problem17_j25_r2_b2_pl2.json  problem18.json  problem18_j16_r5_b7_pl2.json  problem18_j6_r2.json  problem19.json  problem19_j11_r7_b7_pl1.json  problem19_j14_r9.json  problem1_j18_r10.json  problem1_j8_r2_b3_pl1.json  problem2.json  problem20.json  problem20_j17_r5.json  problem20_j30_r9_b2_pl2.json  problem2_j10_r6_b5_pl1.json  problem2_j17_r7.json  problem3.json  problem3_j11_r6_b6_pl2.json  (+19 more)
problemset2/: problem_1.json  problem_10.json  problem_11.json  problem_12.json  problem_13.json  problem_14.json  problem_15.json  problem_16.json  problem_17.json  problem_18.json  problem_19.json  problem_2.json  problem_20.json  problem_3.json  problem_4.json  problem_5.json  problem_6.json  problem_7.json  problem_8.json  problem_9.json
problemset3(BigProblems)/: problem10_j10_r2_b6_pl2.json  problem11_j60_r5_b19_pl2.json  problem12_j42_r9_b10_pl2.json  problem13_j52_r4_b10_pl1.json  problem14_j11_r2_b6_pl2.json  problem15_j85_r2_b13_pl2.json  problem16_j59_r3_b20_pl2.json  problem17_j58_r4_b13_pl1.json  problem18_j4_r2_b2_pl2.json  problem19_j81_r4_b15_pl1.json  problem1_j28_r8_b14_pl1.json  problem20_j95_r9_b10_pl3.json  problem2_j64_r3_b15_pl2.json  problem3_j62_r2_b19_pl2.json  problem4_j68_r9_b17_pl2.json  (+5 more)
rl/: README.md  main.py  (+1 more)
rl/mcts/mcts_fast/: Action.cpp  Action.hpp  Beluga.cpp  Beluga.hpp  CMakeLists.txt  Jig.cpp  Jig.hpp  MCTS.cpp  MCTS.hpp  MCTSNode.cpp  MCTSNode.hpp  Makefile  ProblemState.cpp  ProblemState.hpp  ProductionLine.cpp  ProductionLine.hpp  README.md  Rack.cpp  Rack.hpp  beluga.cpp  beluga.h  bindings.cpp  jig.cpp  jig.h  mcts.cpp  mcts.h  mcts_node.cpp  mcts_node.h  problem_state.cpp  problem_state.h  production_line.cpp  production_line.h  pybind_bindings.cpp  python_interface.py  rack.cpp  rack.h  setup.py  types.h
rl/mcts/mcts_fast/mcts_fast.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
(+1174 files in other folders)
